--- a/app/sass/_states.scss
+++ b/app/sass/_states.scss
@@ -1,7 +1,75 @@
-.is-center-aligned { text-align: center !important; }
+/**
+ *  GLOBAL STATE STYLES
+ *
+ */
+.is-top-aligned { vertical-align: top !important; }
+.is-middle-aligned { vertical-align: middle !important; }
+.is-bottom-aligned { vertical-align: bottom !important; }
+
+.is-floated-right { float: right; }
+.is-floated-left { float: left; }
+
+.is-hidden { display: none; }
+.is-frozen { overflow: hidden; }
+
+.new-positioning-grid {
+  position: relative;
+}
+
 .is-left-aligned { text-align: left !important; }
 .is-right-aligned { text-align: right !important; }
-.is-middle-aligned { vertical-align: middle !important; }
+.is-center-aligned { text-align: center !important; }
 
-.is-hidden { display: none !important; }
-.text-is-hidden { text-indent: -100000px; }
+/**
+ *  RESPONSIVE VISIBILITY
+ *
+ */
+// @each $bp-name, $bp-val in $breakpoints {
+//   .only-gt-#{$bp-name} {
+//     @include breakpoint( '(max-width: #{$bp-val - 1px})' ) {
+//       display: none !important;
+//     }
+//   }
+
+//   .only-lt-#{$bp-name} {
+//     @include breakpoint( '(min-width: #{$bp-val})' ) {
+//       display: none !important;
+//     }
+//   }
+
+//   .lt-#{$bp-name}-left-aligned {
+//     @include breakpoint( '(max-width: #{$bp-val})' ) {
+//       text-align: left;
+//     }
+//   }
+
+//   .lt-#{$bp-name}-right-aligned {
+//     @include breakpoint( '(max-width: #{$bp-val})' ) {
+//       text-align: right;
+//     }
+//   }
+
+//   .lt-#{$bp-name}-center-aligned {
+//     @include breakpoint( '(max-width: #{$bp-val})' ) {
+//       text-align: center;
+//     }
+//   }
+
+//   .gt-#{$bp-name}-left-aligned {
+//     @include breakpoint( '(min-width: #{$bp-val})' ) {
+//       text-align: left;
+//     }
+//   }
+
+//   .gt-#{$bp-name}-right-aligned {
+//     @include breakpoint( '(min-width: #{$bp-val - 1px})' ) {
+//       text-align: right;
+//     }
+//   }
+
+//   .gt-#{$bp-name}-center-aligned {
+//     @include breakpoint( '(min-width: #{$bp-val - 1px})' ) {
+//       text-align: center;
+//     }
+//   }
+// }
