--- a/app/sass/utilities/_breakpoint-m.scss
+++ b/app/sass/utilities/_breakpoint-m.scss
@@ -1,3 +1,12 @@
+/**
+ *  BREAKPOINT MIXIN
+ *
+ *  provides wrapper for media-query based on given breakpoint
+ *
+ *  @param $condition {string}
+ *    media-query condition
+ *
+ */
 @mixin breakpoint( $condition ){
   @media only screen and #{$condition} {
     @content;
