--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -1,10 +1,12 @@
 <script type="text/ng-template" id="menuDropdown">
-    <div class="amd-item">
-        <div ng-mouseover="activate(item.label)" ng-mouseleave="deactivate(rootItem.label)" class="amd-item__name">{{item.label}}</div>
+    <div class="amd-item" ng-class="{'amd-item--active': item.isActive,
+                                     'amd-item--parent': item.children.length,
+                                     'amd-item--highlighted': item.isHighlighted}">
+        <button ng-mouseover="activate(item.label)" ng-mouseleave="deactivate(item.label)" class="amd-item__name">{{item.label}}</button>
     </div>
 
     <div ng-show="item.children.length">
-        <div class="am-dropdown am-dropdown--nested">
+        <div class="am-dropdown am-dropdown--nested" ng-show="item.isActive">
             <div class="am-dropdown__slot" ng-repeat="item in item.children" ng-include="'menuDropdown'"></div>
         </div>
     </div>
@@ -14,8 +16,8 @@
     <ul class="l-list-inline l-list-inline--collapsed">
         <li class="l-list-inline__item" ng-repeat="rootItem in menuItems">
             <div class="app-menu__slot">
-                <div class="am-item">
-                    <div ng-mouseover="activate(rootItem.label)" ng-mouseleave="deactivate(rootItem.label)" class="am-item__name">{{rootItem.label}}</div>
+                <div class="am-item" ng-class="{'am-item--active': rootItem.isActive}">
+                    <button ng-mouseover="activate(rootItem.label)" ng-mouseleave="deactivate(rootItem.label)" class="am-item__name">{{rootItem.label}}</button>
                 </div>
 
                 <div class="am-dropdown am-dropdown--root" ng-show="rootItem.isActive">
