--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -1,27 +1,42 @@
 <script type="text/ng-template" id="menuDropdown">
-    <div class="amd-item" ng-class="{'amd-item--active': item.isActive,
-                                     'amd-item--parent': item.children.length,
-                                     'amd-item--highlighted': item.isHighlighted}">
-        <button ng-mouseover="activate(item.label)" ng-mouseleave="deactivate(item.label)" class="amd-item__name">{{item.label}}</button>
+    <tweets-widget context="item.label" ng-if="!item.children.length"></tweets-widget>
+
+    <div class="amd-item"
+         ng-class="{'amd-item--active': item.isActive,
+                    'amd-item--parent': item.children.length,
+                    'amd-item--highlighted': item.isHighlighted}">
+
+
+         <button class="amd-item__name"
+                 ng-mouseover="activate(item.label)">{{item.label}}</button>
     </div>
 
     <div ng-show="item.children.length">
-        <div class="am-dropdown am-dropdown--nested" ng-show="item.isActive">
-            <div class="am-dropdown__slot" ng-repeat="item in item.children" ng-include="'menuDropdown'"></div>
+        <div class="am-dropdown am-dropdown--nested"
+             ng-show="item.isActive">
+            <div class="am-dropdown__slot"
+                 ng-repeat="item in item.children"
+                 ng-include="'menuDropdown'"></div>
         </div>
     </div>
 </script>
 
 <div class="app-menu">
     <ul class="l-list-inline l-list-inline--collapsed">
-        <li class="l-list-inline__item" ng-repeat="rootItem in data.menu">
+        <li class="l-list-inline__item"
+            ng-repeat="rootItem in data.menu">
             <div class="app-menu__slot">
-                <div class="am-item" ng-class="{'am-item--active': rootItem.isActive}">
-                    <button ng-mouseover="activate(rootItem.label)" ng-mouseleave="deactivate(rootItem.label)" class="am-item__name">{{rootItem.label}}</button>
+                <div class="am-item"
+                     ng-class="{'am-item--active': rootItem.isActive}">
+                    <button class="am-item__name"
+                            ng-mouseover="activate(rootItem.label)">{{rootItem.label}}</button>
                 </div>
 
-                <div class="am-dropdown am-dropdown--root" ng-show="rootItem.isActive">
-                    <div class="am-dropdown__slot" ng-repeat="item in rootItem.children" ng-include="'menuDropdown'"></div>
+                <div class="am-dropdown am-dropdown--root"
+                     ng-show="rootItem.isActive">
+                    <div class="am-dropdown__slot"
+                         ng-repeat="item in rootItem.children"
+                         ng-include="'menuDropdown'"></div>
                 </div>
             </div>
         </li>
