--- a/app/sass/modules/_tweet.scss
+++ b/app/sass/modules/_tweet.scss
@@ -4,7 +4,7 @@
   border-bottom: 1px solid $color-border;
 
   &__author-name {
-
+    font-weight: 600;
   }
 
   &__author-avatar {
@@ -14,11 +14,6 @@
     border-radius: 50%;
     background-size: cover;
     background-position: center center;
-  }
-
-  &__command {
-    font-size: 12px;
-    color: $color-dc-secondary;
   }
 
   &__published {
