basic notification mock

--- a/app/sass/modules/_app-menu.scss
+++ b/app/sass/modules/_app-menu.scss
@@ -27,6 +27,9 @@
   .am-item--active {
     background: darken($color-bg-secondary, 10%);
   }
+  .am-item--highlighted {
+    background: rgba($color-dc-primary, 0.5);
+  }
 
 .am-dropdown {
   position: absolute;
