--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -20,4 +20,16 @@
     </div>
 
     <div class="tweet__text">{{tweet.text}}</div>
+
+    <div class="l-list-inline l-list-inline--x-small">
+        <div class="l-list-inline__item">
+            <button class="link">retweet</button>
+        </div>
+        <div class="l-list-inline__item">
+            <button class="link">save</button>
+        </div>
+        <div class="l-list-inline__item">
+            <button class="link">hide</button>
+        </div>
+    </div>
 </div>
