--- a/app/scripts/templates/notificationPopup.html
+++ b/app/scripts/templates/notificationPopup.html
@@ -21,6 +21,18 @@
                 </div>
 
                 <div class="tweet__text">{{tweet.text}}</div>
+
+                <div class="l-list-inline l-list-inline--x-small">
+                    <div class="l-list-inline__item">
+                        <button class="link">retweet</button>
+                    </div>
+                    <div class="l-list-inline__item">
+                        <button class="link">save</button>
+                    </div>
+                    <div class="l-list-inline__item">
+                        <button class="link">dismiss</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
