--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -120,8 +120,7 @@
 
 @import 'modules/app-menu',
         'modules/tweets-widget',
-        'modules/tweets-popup',
-        'modules/tweet';
+        'modules/tweet-notification';
 
 @import 'states',
         'dev-grid',
