--- a/app/sass/modules/_tweets-widget.scss
+++ b/app/sass/modules/_tweets-widget.scss
@@ -1,9 +1,11 @@
 .tweets-widget {
   position: absolute;
-  top: 0;
-  right: 0;
+  bottom: 0;
+  right: 0; left: 0;
+  padding: $global-baseline/2;
 
-  &__slot {
-    position: relative;
-  }
+  line-height: $global-baseline * 3;
+  
+  background: $color-bg-secondary;
+  border-top: 1px solid $color-border;
 }
