--- a/app/sass/modules/_app-menu.scss
+++ b/app/sass/modules/_app-menu.scss
@@ -1,10 +1,5 @@
 .app-menu {
-  position: absolute;
-  top: 0;
-  left: 0; right: 0;
-
-  background: $color-bg-secondary;
-  border-bottom: 1px solid $color-border;
+  // ...
 
   &__slot {
     position: relative;
