--- a/app/sass/modules/_tweet.scss
+++ b/app/sass/modules/_tweet.scss
@@ -1,7 +1,5 @@
 .tweet {
-  padding: $global-baseline $global-baseline;
-
-  border-bottom: 1px solid $color-border;
+  // ...
 
   &__text {
     line-height: 18px;
