--- a/app/scripts/templates/tweetsWidget.html
+++ b/app/scripts/templates/tweetsWidget.html
@@ -1,17 +1,11 @@
 <div class="tweets-widget">
-    <div class="l-split">
-        <div class="l-split__right">Here be options...</div>
+    <div class="l-list-inline l-list-inline--x-small is-rtl">
+        <div class="l-list-inline__item is-middle-aligned is-ltr">
+            <button class="link">all activity</button>
+        </div>
 
-        <div class="l-split__left">
-            <div class="l-list-inline l-list-inline--x-small">
-                <div class="l-list-inline__item">
-                    Latest tweets:
-                </div>
-
-                <div class="l-list-inline__item" ng-repeat="n in notifications">
-                    <tweet-notification notification="n"></tweet-notification>
-                </div>
-            </div>
+        <div class="l-list-inline__item is-middle-aligned is-ltr" ng-repeat="n in data.notifications">
+            <widget-notification notification="n"></widget-notification>
         </div>
     </div>
 </div>
