--- a/app/scripts/templates/menuNotification.html
+++ b/app/scripts/templates/menuNotification.html
@@ -1,3 +1,7 @@
-<div class="menu-notification">
-    <tweet tweet="data.menu[context]"></tweet>
+<div class="popup">
+    <div class="p-body">
+        <div class="p-body__item">
+            <tweet tweet="data.menu[context.id]"></tweet>
+        </div>
+    </div>
 </div>
