--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -123,8 +123,9 @@
         'modules/app-menu',
         'modules/tweets-widget',
         'modules/widget-notification',
-        'modules/menu-notification',
-        'modules/tweet';
+        'modules/menu-popup',
+        'modules/tweet',
+        'modules/popup';
 
 @import 'states',
         'dev-grid',
