--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -125,7 +125,8 @@
         'modules/widget-notification',
         'modules/menu-popup',
         'modules/tweet',
-        'modules/popup';
+        'modules/popup',
+        'modules/activity-overlay';
 
 @import 'states',
         'dev-grid',
