--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -28,7 +28,7 @@
 <div class="app-menu">
     <ul class="l-list-inline l-list-inline--collapsed">
         <li class="l-list-inline__item"
-            ng-repeat="rootItem in data.menu">
+            ng-repeat="rootItem in menu">
             <div class="app-menu__slot">
                 <div class="am-item"
                      ng-class="{'am-item--active': rootItem.isOpen,
