--- a/app/scripts/templates/menuNotification.html
+++ b/app/scripts/templates/menuNotification.html
@@ -1,7 +1,7 @@
 <div class="popup">
     <div class="p-body">
         <div class="p-body__item">
-            <tweet tweet="data.menu[context.id]"></tweet>
+            <tweet tweet="data.menuMap[context.id]"></tweet>
         </div>
     </div>
 </div>
