started working on the minimal

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -126,7 +126,8 @@
         'modules/menu-popup',
         'modules/tweet',
         'modules/popup',
-        'modules/activity-overlay';
+        'modules/activity-overlay',
+        'modules/menu-minimap';
 
 @import 'states',
         'dev-grid',
