--- a/app/scripts/templates/activityOverlay.html
+++ b/app/scripts/templates/activityOverlay.html
@@ -9,11 +9,20 @@
 
     <div class="grid grid--full">
         <div class="grid__item three-quarters">
+            <div class="ao-section">
+                <div class="l-block">
+                    <div class="ao-section__title">Interface Minimap</div>
+                </div>
 
+                <menu-minimap></menu-minimap>
+            </div>
         </div><!--
         --><div class="grid__item one-quarter">
             <div class="ao-section">
-                <div class="ao-section__title">Most active users</div>
+                <div class="l-block">
+                    <div class="ao-section__title">Filters</div>
+                </div>
+
             </div>
         </div>
     </div>
