--- a/app/sass/configs/_variables.scss
+++ b/app/sass/configs/_variables.scss
@@ -25,6 +25,7 @@
 
   $color-dc-primary: #faff00;
   $color-dc-secondary: #4583ff;
+  $color-dc-tertiary: #ff4d39;
 
 // layout
   $max-width: 1200px;
