initial work on filtering & highlighting tweets

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -126,8 +126,7 @@
         'modules/menu-popup',
         'modules/tweet',
         'modules/popup',
-        'modules/activity-overlay',
-        'modules/menu-minimap';
+        'modules/app-panel';
 
 @import 'states',
         'dev-grid',
