--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -2,7 +2,7 @@
     <div class="l-block-x-small">
         <div class="l-split">
             <div class="l-split__right">
-                <div class="tweet__published">{{tweet.published}}</div>
+                <div class="tweet__published" am-time-ago="tweet.published"></div>
             </div>
 
             <div class="l-split__left">
