more work on filtering (for authors)

--- a/app/scripts/templates/activityPanel.html
+++ b/app/scripts/templates/activityPanel.html
@@ -10,7 +10,11 @@
                     <div class="ap-section__title">Activity History</div>
                 </div>
 
-                <button ng-click="filter()">filter!</button>
+                <div class="l-block">
+                    <button ng-click="filter()">filter by time!</button>
+                </div>
+
+                <button ng-click="filterAurhor()">filter by author!</button>
             </div>
         </div><!--
         --><div class="grid__item one-quarter">
