--- a/app/sass/modules/_app-menu.scss
+++ b/app/sass/modules/_app-menu.scss
@@ -7,7 +7,8 @@
 }
 
 .am-item {
-  // ...
+  @include transition-property(background-color);
+  @include transition-duration(0.2s);
 
   &__name {
     display: block;
@@ -47,6 +48,9 @@
 
 .amd-item {
   width: $global-baseline * 15;
+
+  @include transition-property(background-color);
+  @include transition-duration(0.2s);
 
   &__name {
     @extend .am-item__name;
