--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -13,7 +13,7 @@
          style="background-color: {{getHighlightColor(item.intensity)}} !important;">
 
          <button class="amd-item__name"
-                 ng-mouseover="open(item.id)">{{item.label}} {{item.intensity}}</button>
+                 ng-mouseover="open(item.id)">{{item.label}}</button>
     </div>
 
     <div ng-show="item.children.length">
@@ -37,7 +37,7 @@
                      ng-mouseover="rootItem.isHighlighted = false"
                      style="background-color: {{getHighlightColor(rootItem.intensity)}} !important;">
                     <button class="am-item__name"
-                            ng-mouseover="open(rootItem.id)">{{rootItem.label}} {{rootItem.intensity}}</button>
+                            ng-mouseover="open(rootItem.id)">{{rootItem.label}}</button>
                 </div>
 
                 <div class="am-dropdown am-dropdown--root"
