basic mock for users filter

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -126,7 +126,8 @@
         'modules/menu-popup',
         'modules/tweet',
         'modules/popup',
-        'modules/app-panel';
+        'modules/app-panel',
+        'modules/author';
 
 @import 'states',
         'dev-grid',
