--- a/app/scripts/templates/activityPanel.html
+++ b/app/scripts/templates/activityPanel.html
@@ -1,8 +1,4 @@
 <div class="app-panel">
-    <div class="ap-header">
-        <div class="ap-header__title">Twitting activity</div>
-    </div>
-
     <div class="grid grid--full">
         <div class="grid__item three-quarters">
             <div class="ap-section">
@@ -18,11 +14,7 @@
             </div>
         </div><!--
         --><div class="grid__item one-quarter">
-            <div class="ap-section">
-                <div class="l-block">
-                    <div class="ap-section__title">Filters</div>
-                </div>
-            </div>
+            <authors-filter></authors-filter>
         </div>
     </div>
 </div>
