created data generator

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -13,3 +13,39 @@
     text-decoration: none;
   }
 }
+
+.axis {
+  shape-rendering: crispEdges;
+}
+
+.x.axis line {
+  stroke: white;
+}
+
+.x.axis .minor {
+  stroke-opacity: 0.5;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: black;
+}
+
+.x.axis path {
+  display: none;
+}
+
+.line {
+  fill: none;
+  stroke: $color-dc-secondary;
+  stroke-width: 1.5px;
+}
+
+.area {
+  fill: rgba($color-dc-secondary, 0.3);
+}
