--- a/app/scripts/templates/tweetsWidget.html
+++ b/app/scripts/templates/tweetsWidget.html
@@ -1,7 +1,7 @@
 <div class="tweets-widget">
     <div class="l-list-inline l-list-inline--x-small is-rtl">
         <div class="l-list-inline__item is-middle-aligned is-ltr">
-            <button class="link">all activity</button>
+            <button class="link" ng-click="filters.active = true">all activity</button>
         </div>
 
         <div class="l-list-inline__item is-middle-aligned is-ltr" ng-repeat="n in data.notifications">
