--- a/app/scripts/templates/activityPanel.html
+++ b/app/scripts/templates/activityPanel.html
@@ -1,19 +1,29 @@
 <div class="app-panel">
+    <div class="ap-header">
+        <div class="l-split">
+            <div class="l-split__right">
+                <button class="link" ng-click="filters.active = false">(close)</button>
+            </div>
+
+            <div class="l-split__left">
+                <div class="ap-header__title">Tweet acvitity</div>
+            </div>
+        </div>
+    </div>
+
     <div class="grid grid--full">
-        <div class="grid__item three-quarters">
+        <div class="grid__item two-thirds">
             <div class="ap-section">
                 <div class="l-block">
                     <div class="ap-section__title">Activity History</div>
                 </div>
 
-                <div class="l-block">
-                    <button ng-click="filter()">filter by time!</button>
+                <div class="timeline-slot">
+                    <timeline></timeline>
                 </div>
-
-                <button ng-click="filterAurhor()">filter by author!</button>
             </div>
         </div><!--
-        --><div class="grid__item one-quarter">
+        --><div class="grid__item one-third">
             <authors-filter></authors-filter>
         </div>
     </div>
