--- a/app/sass/modules/_app-menu.scss
+++ b/app/sass/modules/_app-menu.scss
@@ -1,5 +1,6 @@
 .app-menu {
-  // ...
+  position: relative;
+  z-index: 10;
 
   &__slot {
     position: relative;
@@ -13,9 +14,10 @@
   &__name {
     display: block;
     width: 100%;
-    padding: 0 $global-baseline;
+    padding: $global-baseline/6 $global-baseline;
 
-    line-height: $global-baseline * 2.5;
+    font-size: 12px;
+    line-height: $global-baseline * 2;
 
     text-align: left;
   }
@@ -47,7 +49,7 @@
   }
 
 .amd-item {
-  width: $global-baseline * 15;
+  min-width: $global-baseline * 20;
 
   @include transition-property(background-color);
   @include transition-duration(0.2s);
@@ -64,7 +66,7 @@
     position: relative;
 
     &:after {
-      @include simple-arrow($global-baseline/3, darken($color-border, 15%), 'quadrant-2', 0, $global-baseline, 'right');
+      @include simple-arrow($global-baseline/3, darken($color-border, 15%), 'quadrant-2', 0, 10px, 'right');
     }
   }
   .amd-item--active {
